--- a/forecasts/forecast-fx.qmd
+++ b/forecasts/forecast-fx.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: ноябрь 2024 г.
+## Результаты опроса: декабрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -42,11 +42,11 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Резкое ослабление курса рубля 22.11-27.11 (после введения новых внешних ограничений на финансовый сектор РФ) привело к пересмотру «вверх» ожиданий аналитиков по валютному курсу на 2025 г. до 100-105 руб./долл. Этот уровень все равно ниже текущего курса в 109 руб./долл., рубль временно слабее своих фундаментальных значений, определяемых по ценам на сырьевые экспортные товары РФ [подробнее](https://pbc-index.ru/pbc-index.html).
+«План Б: Ключевая ставка + терпение». После решения сохранить ключевую ставку на 21% и комментариев о возможном достижении требуемой жесткости кредитных условий, ожидаемая аналитиками траектория ключевой ставки изменилась – 21% пик ставки в цикле, но более раннего снижения ждать не стоит (3 кв. 2025 г.) …
 
-Новые данные по инфляции предполагают, что инфляция по итогам 2024 г. может превысить прогноз Банка России. Ожидания консенсуса – 8,8% г/г (8-8,5% ЦБ) на конец 2024 г., 6% г/г (4,5-5% ЦБ) - на конец 2025 г.
+…Инфляционное давление усилилось, а прогнозы аналитиков продолжают повышаться – инфляция на конец 2025 г. 6,5% г/г, что выше, чем в инфляционном сценарии Банка России (5,5-6%).
 
-Превышение прогноза по инфляции и возможные проинфляционные эффекты от ослабления курса рубля вероятно стали факторами для пересмотра ожиданий аналитиков по траектории ключевой ставки Банка России. На заседании в декабре ключевая ставка может быть повышена до 23% (8 из 10 аналитиков) (22% в результатах опроса в октябре).
+Волатильность курса рубля остается высокой (после введения новых внешних ограничений на финансовый сектор РФ), что влияет на ожидания аналитиков по валютному курсу в 2025 г. Разброс мнений один из самых высоких за период консенсус-опросов: от укрепления до 96 руб. долл. до ослабления к 115 руб./долл.
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
