--- a/index.qmd
+++ b/index.qmd
@@ -10,6 +10,10 @@ format:
 ::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Актуальное
+25 декабря 2024. Сырьевой индекс ЦЦИ. **в 2024 г.: не ТЭКом единым**
+
+[Мониторинг декабрь →](pdf/2024-12-cci-index.pdf)
+
 
 4 декабря 2024. Сырьевой индекс ЦЦИ. **Экспортные цены нажали на газ**
 
@@ -31,9 +35,6 @@ format:
 
 [Мониторинг сентябрь →](pdf/2024-09-cci-index.pdf)
 
-13 сентября 2024. **Пятница с ЦЦИ: корабли с черным золотом**
-
-[Материалы →](events/2024-09-13-crude.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -42,6 +43,19 @@ format:
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
+
+**25.12.2024 Перевозки нефтепродуктов**
+
+Шторм на Черном море вызвал рост ставок  на наиболее востребованных маршрутах в Турцию и Средиземное море. Отмена эмбарго на поставки высокооктанового бензина не привела к росту его морского экспорта.
+
+[Подробнее →](markets/markets-sea-freight.qmd)
+
+**24.12.2024 Перевозки зерна**
+
+Стоимость перевозок балкерами класса Handysize (16–32 тыс. т) в Черноморском регионе снизилась на 7,9% н/н из-за низкого объема спотовых грузов зерна. Ставки фрахта для балкеров типа Coaster снизились в среднем на 6,2% н/н.
+
+[Подробнее →](markets/markets-sea-freight.qmd)
+
 
 **23.12.2024 Пшеница**
 
@@ -67,11 +81,12 @@ format:
 
 [Подробнее →](markets/markets-railways.qmd)
 
-**02.12.2024 Уголь**
+**09.12.2024 Уголь**
 
-Цены на энергетический уголь продолжают медленно спускаться вниз, однако надежда на умеренное восстановление в зимний период остается. Индекс ЦЦИ на уголь калорийностью 6000 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 2,1%. Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 142-144 долл./т CFR South China, на коксующийся уголь ГЖ – 140 долл./т CFR China.
+Цены на энергетический уголь начали активнее спускаться вниз, высокие запасы на складах и в портах Китая, тёплая зима и большой рынок предложения поддерживают давление на цены. Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 145-146 долл./т CFR South China, 142-143 долл./т CFR North China, 156-160 долл./т CFR Indonesia, на коксующийся уголь ГЖ – 135 долл./т CFR China.   
 
 [Подробнее →](markets/markets-coal.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
