--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -17,6 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*09.12.2024* Уголь
+
+**Сезонные факторы пока не оправдывают надежд**
+
+Цены на энергетический уголь начали активнее спускаться вниз, высокие запасы на складах и в портах Китая, тёплая зима и большой рынок предложения поддерживают давление на цены.   
+
+- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 145-146 долл./т CFR South China, 142-143 долл./т CFR North China, 156-160 долл./т CFR Indonesia.
+- Рассматриваемый уровень цен на коксующийся уголь: ГЖ – 135 долл./т CFR China.   
+
+![](../images/icon-locker.svg){width="6%"}
+
+
 *02.12.2024* Уголь
 
 **Цены на уголь дрейфуют вниз**
