--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -17,37 +17,38 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*14.11.2024 Перевозки нефтепродуктов*
+*25.12.2024 Перевозки нефтепродуктов*
 
-**Рекордный экспорт темных нефтепродуктов поддерживает ставки**
+**Шторм снова поднял ставки на Черном море**
 
-Ставки фрахта светлых нефтепродуктов оставались стабильными на основных маршрутах, за исключением направления в Западную Индию. На рынке фрахта темных нефтепродуктов зафиксирован умеренный рост ставок на ключевых маршрутах из Черного моря.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*12.11.2024 Перевозки нефти*
-
-**Конец ремонтов в Новороссийске и Турции помог фрахту вырасти**
-
-Продление сокращения добычи странами ОПЕК+ и снижение экспорта российской нефти будет сдерживать рост фрахтовых ставок. Загрузка портов российской экспортной нефтью снизилась на фоне роста внутренней переработки нефти и профилактических работ в Новороссийске».
+Шторм на Черном море вызвал рост ставок  на наиболее востребованных маршрутах в Турцию и Средиземное море. Отмена эмбарго на поставки высокооктанового бензина не привела к росту его морского экспорта.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*12.11.2024 Перевозки угля*
+*24.12.2024 Перевозки угля*
 
-**Высокие запасы угля ограничат сезонный рост ставок**
+**Уголь провожает уходящий год без праздничного настроения **
 
-В третьей декаде ноября участники рынка ожидают увеличения спроса на уголь и восстановления ставок фрахта до летнего уровня. Ставка фрахта по маршруту «Восточный-Северный Китай» упала на 11% н/н.
+Стоимость перевозки угля из порта Восточный в Северный Китай упала на 10% н/н.
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
-*11.11.2024 Перевозки зерна*
+*24.12.2024 Перевозки зерна*
 
-**Каспийское море радует ростом в ноябре**
+**Ставки фрахта на зерно завершают год падением**
 
-Ставки фрахта для балкеров типа Handysize в Черном море продолжают снижаться, стоимость перевозки зерна балкерами типа Coaster в порты Египта и Турции упала на 7% н/н.
+Стоимость перевозок балкерами класса Handysize (16–32 тыс. т) в Черноморском регионе снизилась на 7,9% н/н из-за низкого объема спотовых грузов зерна. Ставки фрахта для балкеров типа Coaster снизились в среднем на 6,2% н/н.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*03.12.2024 Перевозки нефти*
+
+**Экспорт растет в преддверии встречи ОПЕК+**
+
+Загрузка портов Балтики и Новороссийска выросла в преддверии встречи ОПЕК+, при этом из-за непогоды отгрузки нефти через Козьмино упали на 32,8% н/н, что не отразилось на фрахтовых ставка в направлении Китая. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
