--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -197,4 +197,4 @@ discount_plot
 
 ------------------------------------------------------------------------
 
-[Мониторинг - Ноябрь 2024](reports/2024-11-cci-index.pdf)
+[Мониторинг - Декабрь 2024](reports/2024-12-cci-index.pdf)
