--- a/index.qmd
+++ b/index.qmd
@@ -44,6 +44,13 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+**27.12.2024 Сухопутная логистика. Полувагоны**
+
+По итогам первого этапа индексации железнодорожного тарифа ставки предоставления полувагонов под перевозку угля выросли на 1-5%. С 1 января 2025 г. порожний пробег полувагонов будет дополнительно проиндексирован на 10%.
+
+[Подробнее →](markets/markets-railways-van.qmd)
+
+
 **25.12.2024 Перевозки нефтепродуктов**
 
 Шторм на Черном море вызвал рост ставок  на наиболее востребованных маршрутах в Турцию и Средиземное море. Отмена эмбарго на поставки высокооктанового бензина не привела к росту его морского экспорта.
