--- a/markets/markets-railways-van.qmd
+++ b/markets/markets-railways-van.qmd
@@ -17,6 +17,19 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*27.12.2024*
+
+**Грузоотправители и вагонные компании адаптируются к новым железнодорожным тарифам**
+
+-   По итогам первого этапа индексации железнодорожного тарифа ставки предоставления полувагонов под перевозку угля выросли на 1-5%. С 1 января 2025 г. порожний пробег полувагонов будет дополнительно проиндексирован на 10%.
+
+-   Избыток полувагонов на сети РЖД и снижение доходности оперирования ими корректируют ставки аренды типовых полувагонов до 4% к значениям ноября.
+
+-   Погрузка угля на сети РЖД в декабре близка к среднесуточным максимумам 2024 г.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *29.11.2024*
 
 **На сети началась борьба с «лишними» полувагонами**
@@ -28,7 +41,6 @@ format:
 -   Ставки предоставления полувагонов остаются стабильными до момента индексации железнодорожных тарифов.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *31.10.2024*
 
