new events page

--- a/forecasts/forecast-agro.qmd
+++ b/forecasts/forecast-agro.qmd
@@ -27,6 +27,8 @@ library(openxlsx)
 library(scales)
 df <- read.xlsx('../xls/ЦЦИ Агроконсенсус.xlsx', sheet = 1)
 
+names(df)[4:5] <- c("Текущий сезон" ,  "Следующий сезон")
+
 df %>%
    kbl() %>%
    kable_styling(bootstrap_options = "hover")
@@ -35,13 +37,12 @@ df %>%
 #   row_spec(0, color = "#1A4AFC", background = "white", font_size = "larger", bold = TRUE, align = "right")
 ```
 
-\*Актуальные даные и скрытые значения доступны по [подписке](../subscribe.qmd).
-В скобках указаны значения предыдущего опроса
+\*Актуальные даные и скрытые значения доступны по [подписке](../subscribe.qmd). В скобках указаны значения предыдущего опроса
 
 \*\*Текущий сезон 2024/2025, следующий сезон 2025/2026
 
-1) Здесь и далее данные без учета статистической инфорации по Донецкой Народной Республике (ДНР), Луганской народной Республике (ЛНР), Запорожской и Херсонской областям; в весе после доработки
-2) Фактические данные по экспорту - оценка компании ПроЗерно
+1)  Здесь и далее данные без учета статистической инфорации по Донецкой Народной Республике (ДНР), Луганской народной Республике (ЛНР), Запорожской и Херсонской областям; в весе после доработки
+2)  Фактические данные по экспорту - оценка компании ПроЗерно
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -51,7 +52,7 @@ df %>%
 
 Ожидания по экспорту пшеницы выросли в среднем на 1,6 млн т в текущем и следующем сезоне.
 
-Аналитики рынка начали давать первые оценки урожая зерновых и пшеницы в регионах ДНР, ЛНР, Запорожской и Херсонской областях. В текущем году урожай зерна в них оценивается в среднем в 3,4 млн т, пшеницы - в 2,6 млн т. 
+Аналитики рынка начали давать первые оценки урожая зерновых и пшеницы в регионах ДНР, ЛНР, Запорожской и Херсонской областях. В текущем году урожай зерна в них оценивается в среднем в 3,4 млн т, пшеницы - в 2,6 млн т.
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -112,6 +113,8 @@ hc
 ## Методология
 
 [Методология консенсуса](../methodology/methodology-consensus-pbc.qmd)
+
+[Спецификация агроконсенсуса](../pdf/Agro_Specifications_PBC.pdf)
 :::
 ::::
 :::::::::::
