--- a/index.qmd
+++ b/index.qmd
@@ -10,10 +10,14 @@ format:
 ::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Актуальное
+
+20 января 2025. **ЦЦИ начал публиковать индексы на фосфорсодержащие удобрения**
+
+[Пресс-релиз →](events/2025-01-20-fertilizers.qmd)
+
 25 декабря 2024. Сырьевой индекс ЦЦИ. **в 2024 г.: не ТЭКом единым**
 
 [Мониторинг декабрь →](pdf/2024-12-cci-index.pdf)
-
 
 4 декабря 2024. Сырьевой индекс ЦЦИ. **Экспортные цены нажали на газ**
 
@@ -31,10 +35,6 @@ format:
 
 [Пресс-релиз →](events/2024-10-21-cbonds.qmd)
 
-3 октября 2024. Сырьевой индекс ЦЦИ. **Цены на российское сырье достигли минимума 2024 г.**
-
-[Мониторинг сентябрь →](pdf/2024-09-cci-index.pdf)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -43,6 +43,30 @@ format:
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
+
+**20.01.2025 Минеральные удобрения**
+
+Цены на карбамид растут вслед за спросом. Индекс цен Prilled Urea FOB Baltic за прошедшую неделю увеличился на 2%, Granular Urea FOB Baltic – на 5%.
+
+[Подробнее →](markets/markets-fertilizers.qmd)
+
+**15.01.2025 Сухопутная контейнерная логистика**
+
+Операторы готовы отправлять контейнеры в восточном направлении почти бесплатно: в январе ставки на перевозку 40 футовых контейнеров из Москвы в Новосибирск и Владивосток обновили минимумы последних лет.
+
+[Подробнее →](markets/markets-railways.qmd)
+
+**13.01.2025 Пшеница**
+
+Экспортные цены на пшеницу выросли на 4 долл. по сравнению с концом декабря 2024 г. Казахстан не продлил запрет на импорт пшеницы из третьих стран и ЕАЭС, с 1 января 2025 г. российская пшеница может поступать на казахстанский рынок без ограничений. С 1 января 2025 г. введены 5% таможенные пошлины на вывоз из России за пределы ЕАЭС гороха, нута и чечевицы.
+
+[Подробнее →](markets/markets-wheat.qmd)
+
+**01.01.2025 Подсолнечное масло**
+
+Экспортные цены на подсолнечное масло за месяц упали на 85 долл. Экспортная пошлина на подсолнечное масло в РФ на январь 2025 г. выросла в 1,7 раз по сравнению с декабрем 2024 г. до 16 тыс. руб. По предварительным данным Росстата валовой сбор подсолнечника в РФ в 2024 г. составил 16,6 млн т, выше ноябрьского прогноза аналитиков. 
+
+[Подробнее →](markets/markets-oilseed.qmd)
 
 **27.12.2024 Сухопутная логистика. Полувагоны**
 
@@ -64,35 +88,18 @@ format:
 [Подробнее →](markets/markets-sea-freight.qmd)
 
 
-**23.12.2024 Пшеница**
+**20.12.2024 Уголь**
 
-Экспортные цены на пшеницу выросли на 4 долл. по сравнению с прошлой неделей. Правительство РФ утвердило квоту на экспорт пшеницы в 2025 г. в размере 10,6 млн т, на 400 тыс. т ниже ранее одобренного таможенной подкомиссией объема. По прогнозам агентства FranceAgriMer экспорт французской мягкой пшеницы в 2024/25 г. упадет до 3,5 млн т, минимума с начала XXI в.
+Несмотря на снижение температуры воздуха, цены на уголь продолжают снижаться. Китай продолжает увеличивать объёмы собственной добычи угля, а также активно заполняет склады в портах и на электростанциях. Индекс ЦЦИ на уголь калорийностью 5500 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 4,8%.
+   
+[Подробнее →](markets/markets-coal.qmd)
 
-[Подробнее →](markets/markets-wheat.qmd)
-
-**23.12.2024 Азотные удобрения**
-
-Результаты индийского тендера еще не опубликованы, но цены уже растут на всех направлениях.
-
-[Подробнее →](markets/markets-fertilizers.qmd)
 
 **18.12.2024 Нефть**
 
 По итогам предыдущей недели стоимость российской нефти варьировалась в зависимости от сорта и базиса поставки. Дельта изменения находится в пределах от -1% до +1%. Дисконт на ESPO FOB Kozmino сузился более чем на 10% на фоне роста спроса в Китае. Морской экспорт российской нефти за отчетную неделю увеличился более чем на 7% н/н.
 
 [Подробнее →](markets/markets-oil.qmd)
-
-**16.12.2024 Сухопутная контейнерная логистика**
-
-Несмотря на индексацию грузового железнодорожного тарифа, ставки на перевозку контейнерных грузов по наиболее востребованным внутрироссийским маршрутам снизились. Ставки на прямые контейнерные поезда из Китая в Россию не показали в декабре заметной динамики, однако стоимость ж.-д. плеча на мультимодальных маршрутах через порты Дальнего Востока продолжает расти уже шестой месяц подряд.
-
-[Подробнее →](markets/markets-railways.qmd)
-
-**09.12.2024 Уголь**
-
-Цены на энергетический уголь начали активнее спускаться вниз, высокие запасы на складах и в портах Китая, тёплая зима и большой рынок предложения поддерживают давление на цены. Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 145-146 долл./т CFR South China, 142-143 долл./т CFR North China, 156-160 долл./т CFR Indonesia, на коксующийся уголь ГЖ – 135 долл./т CFR China.   
-
-[Подробнее →](markets/markets-coal.qmd)
 
 :::
 
