--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -17,6 +17,32 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*20.12.2024* Уголь
+
+**Похолодание в Китае не поддержало цены на уголь**
+
+Несмотря на снижение температуры воздуха, цены на уголь продолжают снижаться. Китай продолжает увеличивать объёмы собственной добычи угля, а также активно заполняет склады в портах и на электростанциях. Индекс ЦЦИ на уголь калорийностью 5500 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 4,8%.
+
+- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 156 долл./т CFR Indonesia.
+- Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 128-132 долл./т CFR China.   
+
+![](../images/icon-locker.svg){width="6%"}
+
+[Подробнее](../demo-subscription.qmd)
+
+*16.12.2024* Уголь
+
+**Декабрь цены не поддержал**
+
+Цены на энергетический уголь продолжают снижаться. Тёплая зима и рост внутренней добычи в Китае негативно влияют на экспортные цены. В декабре запасы в северных портах КНР остаются на высшем уровне по сравнению с аналогичным периодом последних 5-ти лет. Индекс ЦЦИ на уголь калорийностью 5500 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 3,5%.
+
+- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 133-142 долл./т CFR China.
+- Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 135-138 долл./т CFR China.   
+
+![](../images/icon-locker.svg){width="6%"}
+
+[Подробнее](../demo-subscription.qmd)
+
 *09.12.2024* Уголь
 
 **Сезонные факторы пока не оправдывают надежд**
@@ -27,56 +53,6 @@ format:
 - Рассматриваемый уровень цен на коксующийся уголь: ГЖ – 135 долл./т CFR China.   
 
 ![](../images/icon-locker.svg){width="6%"}
-
-
-*02.12.2024* Уголь
-
-**Цены на уголь дрейфуют вниз**
-
-Цены на энергетический уголь продолжают медленно спускаться вниз, однако надежда на умеренное восстановление в зимний период остается. Индекс ЦЦИ на уголь калорийностью 6000 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 2,1%. 
-
-- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 142-144 долл./т CFR South China.
-- Рассматриваемый уровень цен на коксующийся уголь: ГЖ – 140 долл./т CFR China.   
-
-*25.11.2024* Уголь
-
-**Цены на уголь продолжают находиться под давлением**
-
-Стоимость энергетического угля по-прежнему не находит поддержки, несмотря на приближение зимнего периода. Рост экспорта китайской стали на рынок Индии ограничивает необходимость увеличивать загрузку индийских сталелитейных мощностей и сдерживает спрос на металлургический уголь.
-
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 155 долл./т CFR Indonesia, 144-145 долл./т CFR China.
--   Рассматриваемый уровень цен на коксующийся уголь: ГЖ – 135-143 долл./т CFR China, марка Ж – 145 долл./т CFR China.\
--   Рассматриваемый уровень цен на энергетический уголь 6000 ккал/кг FOB Дальний восток в Южную Корею: 105-110 долл./т
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
-
-*18.11.2024* Уголь
-
-**Давление на уголь со всех сторон**
-
-Тёплая погода, высокие запасы угля и повышенный уровень гидрогенерации в Индии, оказывает давление на цены на уголь. В Турции наблюдается высокая активность на рынке спот из-за проблем с поставками российского угля. На рынке КНР большое количество накопленного угля не приносит оживления на рынок несмотря на начало отопительного сезона.
-
--   Рассматриваемый уровень цен на марку ГЖ CFR China: 132 - 140 долл./т
--   Рассматриваемый уровень цен на энергетический уголь 6000 FOB Дальний восток в Южную Корею: 105-110 долл./т
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
-
-*11.11.2024* Уголь
-
-**Цены на уголь падают из-за слабого спроса**
-
-Высокие запасы энергетического угля на рынке Китая ежедневно давят на российские цены. Строительные и металлургические заводы Китая продолжают простаивать, что приводит к постоянному снижению спроса на металлургические угли и снижению цен:
-
--   Рассматриваемый уровень цен на марку ГЖ CFR China: 132 долл./т
--   Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV) CIF Indonesia: 156 долл./т
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
 
 ### События
 
