--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Азотные удобрения"
+title: "Минеральные удобрения"
 sidebar: false
 format: 
   html:
@@ -16,27 +16,28 @@ format:
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*20.01.2025 Минеральные удобрения*
+
+**Цены на карбамид растут вслед за спросом**
+
+Индекс цен Prilled Urea FOB Baltic за прошедшую неделю увеличился на 2%, Granular Urea FOB Baltic – на 5%.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*13.01.2025 Минеральные удобрения*
+
+**Азотные удобрения на позитивном тренде**
+
+Опубликованные результаты последнего индийского тендера на закупку карбамида не оправдали ожиданий, и Индия выходит на рынок с новым тендером с поставкой до 5 марта.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *23.12.2024 Азотные удобрения*
 
 **Тендер нагнетает цены**
 
 Результаты индийского тендера еще не опубликованы, но цены уже растут на всех направлениях.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*16.12.2024 Азотные удобрения*
-
-**Цены на карбамид пошли вверх**
-
-Индийская компания NFL объявила тендер на закупку карбамида, результаты которого будут опубликованы после 19 декабря. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*09.12.2024 Азотные удобрения*
-
-**Индия вновь подогревает спрос**
-
-Индия планирует вернуться с новым тендером на закупку карбамида в декабре. 
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
