--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -17,6 +17,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*15.01.2025*
+
+**Ставки на внутрироссийские контейнерные перевозки с Запада на Восток резко обвалились**
+
+-   Операторы готовы отправлять контейнеры в восточном направлении почти бесплатно: в январе ставки на перевозку 40 футовых контейнеров из Москвы в Новосибирск и Владивосток обновили минимумы последних лет.
+-   Ставки на прямые контейнерные поезда из Китая в Россию снизились за месяц на 6-7% до 7,3– 8,1 тыс. долл.
+-   Контейнерные перевозки по сети РЖД обновили два рекорда: в декабре во всех видах сообщения отправлено 686,4 тыс. ДФЭ (исторический максимум в течение календарного месяца), а за 12 мес. 2024 г.– 7,88 млн ДФЭ (максимум в течение календарного года).
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *16.12.2024*
 
 **Контейнерный рынок играет по своим правилам**
@@ -37,15 +47,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*18.10.2024*
-
-**Ставки на прямые контейнерные поезда из Китая в Россию впервые с мая остановили рост.**
-
--   Прямое железнодорожное сообщение теряет конкурентные преимущества: из-за роста и непредсказуемости сроков перевозки ставки на отправку 40-футового контейнера из крупнейших городов КНР в Москву опустились ниже 9 тыс. долл.
--   Стоимость железнодорожного плеча на мультимодальном маршруте контейнерных перевозок «порты Китая – порты Дальнего Востока – Москва» выросла за месяц на 10%.
--   Темпы прироста контейнерных перевозок по сети РЖД снизились в сентябре до +1,9% г/г. На железной дороге фиксируются массовые отставления поездов от движения, сохраняются проблемы вывоза контейнеров из дальневосточных портов и с сухопутных пограничных переходов.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
