--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,6 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*13.01.2025 Пшеница*
+
+**Казахстан открылся для российской пшеницы**
+
+Экспортные цены на пшеницу выросли на 4 долл. по сравнению с концом декабря 2024 г. 
+
+Казахстан не продлил запрет на импорт пшеницы из третьих стран и ЕАЭС, с 1 января 2025 г. российская пшеница может поступать на казахстанский рынок без ограничений. 
+
+С 1 января 2025 г. введены 5% таможенные пошлины на вывоз из России за пределы ЕАЭС гороха, нута и чечевицы.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *23.12.2024 Пшеница*
 
 **Французский экспорт пшеницы упадет до минимума с начала века**
