--- a/methodology/methodology-consensus-pbc.qmd
+++ b/methodology/methodology-consensus-pbc.qmd
@@ -12,7 +12,7 @@ fig-format: svg
 
 ### Введение
 
-Данная методология подробно описывает принципы работы Центра ценовых индексов при формировании консенсус-прогнозов индикаторов опроса профессиональных аналитиков.
+Данная методология подробно описывает принципы работы Центра ценовых индексов при формировании консенсус-прогнозов индикаторов в опросах профессиональных аналитиков.
 
 Основной целью Центра ценовых индексов является публикация достоверных и репрезентативных консенсус-прогнозов, отражающих ожидания профессионального сообщества.
 
@@ -22,7 +22,7 @@ fig-format: svg
 
 ### Порядок сбора информации
 
-Сбор информации осуществляется регулярно на основе опроса участников рынка, в соответствии с внутренними регламентами сбора, проверки, анализа и хранения конфиденциальной информации.
+Сбор информации осуществляется сотрудниками Центра ценовых индексов либо с привлечением третьих лиц на основе опроса участников рынка в соответствии с внутренними регламентами сбора, проверки, анализа и хранения конфиденциальной информации. 
 
 Центр ценовых индексов получает информацию из всех надежных источников. Сотрудники Центра ценовых индексов постоянно стремятся увеличивать число компаний и респондентов, расширяя базу контактов. Число аналитиков, готовых предоставлять информацию, может варьироваться в зависимости от ситуации в экономике.
 
@@ -57,7 +57,7 @@ fig-format: svg
 
 Результаты опроса представляются в агрегированном и обезличенном виде.
 
-Для каждого из представленных в опросе индикатора публикуются следующие агрегированные данные: медиана, выборочное среднее, максимум и минимум, 25% и 75%- перцентили. Обработка данных прогноза осуществляется методологической группой независимой методологической группой.
+Для каждого из представленных в опросе и приведенных в спецификации индикаторов могут публиковаться следующие агрегированные данные: медиана, выборочное среднее, максимум и минимум, 25% и 75%-перцентили. 
 
 Медиана – серединное значение ответов респондентов, 50% ответов больше или равны медиане, другие 50% ответов меньше или равны медиане.
 
@@ -77,9 +77,9 @@ fig-format: svg
 
 ### Принципы формирования методологии и внесения изменений
 
-Методологии разрабатываются и утверждаются независимым от блока оценки методологическим комитетом, который состоит из сотрудников, обладающих достаточным уровнем квалификации и профессиональным опытом.
+Методологии разрабатываются и утверждаются независимым от прочих подразделений методологическим комитетом, который состоит из сотрудников, обладающих достаточным уровнем квалификации и профессиональным опытом.
 
-В целях обеспечения актуальности, осуществляется ежегодная оценка соответствия методологии, необходимости упразднения неактуальных или создания новых индикаторов.
+В целях обеспечения актуальности, осуществляется ежегодная оценка соответствия методологии, необходимости упразднения неактуальных или создания новых опросных индикаторов.
 
 Центр ценовых индексов приветствует диалог с участниками опроса по вопросам методики, применяемой для оценки и формирования индикаторов. Обновление методологии подразумевает подробное объяснение предлагаемых изменений и их обоснование.
 
@@ -92,7 +92,7 @@ fig-format: svg
 -   Исходные данные, используемые при формировании консенсус-прогноза;
 -   Дополнительные сведения, предоставляемые респондентами в рамках регулярных опросов.
 -   Методологии, используемые при формировании консенсус-прогноза;
--   Результаты агрегированных данных консенсус-прогноза в соответствие с данной методологией.
+-   Результаты агрегированных данных консенсус-прогноза в соответствии с данной методологией.
 
 ### Конфиденциальность данных
 
