--- a/events.qmd
+++ b/events.qmd
@@ -31,3 +31,7 @@ title: "События"
 ### Пятница с ЦЦИ: уголь (31 мая 2024)
 
 [Материалы вебинара](events/2024-05-31-coal.qmd)
+
+### Презентация Сырьевого индекса ЦЦИ (27 мая 2024)
+
+[Материалы вебинара](events/2024-05-27-PBC-index.qmd)
