--- a/markets/markets-oilseed.qmd
+++ b/markets/markets-oilseed.qmd
@@ -17,15 +17,28 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*01.01.2025 Подсолнечное масло*
+
+**Цены на масло скользят вниз, пошлина взлетает вверх**
+
+Экспортные цены на подсолнечное масло за месяц упали на 85 долл. 
+
+Экспортная пошлина на подсолнечное масло в РФ на январь 2025 г. выросла в 1,7 раз по сравнению с декабрем 2024 г. до 16 тыс. руб.
+
+По предварительным данным Росстата валовой сбор подсолнечника в РФ в 2024 г. составил 16,6 млн т, выше ноябрьского прогноза аналитиков. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *02.12.2024 Подсолнечное масло*
 
 **Индия заменяет пальмовое масло подсолнечным**
 
-Экспортные цены на подсолнечное масло за месяц выросли еще на 45  долл. 
+Экспортные цены на подсолнечное масло за месяц выросли еще на 45 долл.
 
-Экспортная пошлина на подсолнечное масло в декабре 2024 г. вырастет в три раза до 9,2 тыс. руб. 
+Экспортная пошлина на подсолнечное масло в декабре 2024 г. вырастет в три раза до 9,2 тыс. руб.
 
-Индия по итогам 2023/24 г. нарастила импорт подсолнечного масла на 17% до 3,5 млн т. 
+Индия по итогам 2023/24 г. нарастила импорт подсолнечного масла на 17% до 3,5 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -40,7 +53,6 @@ format:
 В начале ноября 2024 г. пальмовое масло стало дороже подсолнечного и соевого.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
